# bookstore

./: .dockerignore  .env.dev  .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.yml  heroku.yml  pyproject.toml
.github/workflows/: build.yml  django.yml
bookstore/: settings.py  urls.py  views.py
bookstore/templates/: hello_world.html
order/: urls.py
order/viewsets/: order_viewset.py
product/: urls.py
product/viewsets/: product_viewset.py
