[tool.poetry]
name = "bookstore"
version = "0.1.0"
description = "Bookstore API"
authors = ["hsanfilippo <henrique.sanfilippo@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^8.3.2"
factory-boy = "^3.3.0"
django = "^4.2"
django-rest-framework = "^0.1.0"
black = "^24.8.0"
django-extensions = "^3.2.3"
django-debug-toolbar = "^4.4.6"
psycopg2-binary = "^2.9.9"
gunicorn = "^23.0.0"
whitenoise = "^6.9.0"
gitpython = "^3.1.44"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
